--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Harvey Specter</title>
         <meta name="description" content="TODO Description. This profile-page is a homage to the earliest web designers who were working without CSS & JS which were only invented in 1994/5."/> <!-- Meta description tips: https://www.coderseo.com/meta-description-generator -->
         <!-- <meta name="robots" content="noindex"> robots.txt file overrides-->
+         <link href="styles.css" rel="stylesheet">
         <link rel="icon" href="media/favicon.ico" type="image/x-icon"> 
         <base target="_blank"> <!-- only keep with footer script excluding internal links -->
 
@@ -17,7 +18,7 @@
 
     </head>
     <body>
-        <h1>Harvey Reginald Specter</h1>
+        <h1>Harvey Reginald Specter aka Gabriel Macht</h1>
         <h2>“I don't play the odds, I play the man.”</h2>
         <img src="https://d1fufvy4xao6k9.cloudfront.net/images/blog/posts/2023/11/hockerty_harvey_specter_in_suits_netflix_show_8ed21966_c75b_40a0_864d_a62178daf680.jpg" height="300">
         <hr>
